@@ -116,6 +116,12 @@ public:
   octave_value convert_to_str (void) const
     { return octave_value (matrix); }
 
+  octave_value transpose (void) const
+    { return octave_value (matrix.transpose ()); }
+
+  octave_value hermitian (void) const
+    { return octave_value (matrix.transpose ()); }
+
   void print (ostream& os, bool pr_as_read_syntax = false);
 
   int type_id (void) const { return t_id; }
